force-app/main/default/objects/cgc_sync__Sync_Report_Links__c/cgc_sync__Sync_Report_Links__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Conjunction object for reports and related logs.</description>
    <label>Sync Report Links</label>
</CustomObject>