force-app/main/default/objects/cgc_sync__Sync_Report_Links__c/fields/cgc_sync__Device_Event_Logs_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Event_Logs_Id__c</fullName>
    <description>Stores device event logs report ID.</description>
    <label>Device Event Logs Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>