force-app/main/default/objects/cgc_sync__Sync_Report_Links__c/fields/cgc_sync__KPI_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__KPI_Id__c</fullName>
    <description>Stores API KPI Report ID.</description>
    <label>KPI Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>